--- a/stroke-prediction.ipynb
+++ b/stroke-prediction.ipynb
@@ -3564,7 +3564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1220,
+   "execution_count": 1228,
    "id": "f71ee308",
    "metadata": {
     "execution": {
@@ -4292,7 +4292,7 @@
    "outputs": [],
    "source": [
     "# load JS visualization code to notebook\n",
-    "# shap.initjs()"
+    "shap.initjs()"
    ]
   },
   {
